# Test-Engine

./: .gitignore  BUILD.md  CMakeLists.txt  GenerateProjectFiles.bat  Jenkinsfile  README.md
CMake/: ccache.cmake
Code/: CMakeLists.txt  CMakeSettings.json  Platform.hpp  main.cpp
Code/Assets/: Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  CheckFileType.cpp
Code/Assets/Fonts/: TTFFont.cpp  TTFFont.hpp
Code/Assets/Importers/: ObjectImporter.cpp  ObjectImporter.hpp
Code/Assets/Importers/Assimp/: AssimpHelpers.cpp  AssimpHelpers.hpp  AssimpImporter.cpp  AssimpImporter.hpp
Code/Assets/Textures/: SoftwareTexture.cpp  SoftwareTexture.hpp  Texture.cpp  Texture.hpp  VulkanTexture.cpp  VulkanTexture.hpp
Code/Debug/: Assert.hpp  Exception.cpp  Log.cpp  Log.hpp
Code/Inputs/: Action.hpp  Binding.cpp  Binding.hpp  Events.cpp  Events.hpp  SDLEvents.cpp  SDLEvents.hpp
Code/Maths/: CMakeLists.txt  Defines.hpp  Maths.hpp  MathsException.hpp  MathsUtils.cpp  MathsUtils.hpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Vector.cpp  Vector.hpp  math.cpp  math.hpp  math_tmp.cpp  math_tmp.hpp
Code/Maths/Tests/: MatrixTest.cpp  MatrixTest.hpp
Code/Misc/: Arena.cpp  Arena.hpp  TimerManager.cpp  TimerManager.hpp
Code/Rendering/: Camera.cpp  Camera.hpp  D3DRenderer.hpp  DebugLevel.hpp  DeletionQueue.cpp  DeletionQueue.hpp  FrameData.cpp  FrameData.hpp  FrameStats.cpp  FrameStats.hpp  GLRenderer.cpp  GLRenderer.hpp  GPUDevice.cpp  GPUDevice.hpp  MeshGeometry.cpp  MeshGeometry.hpp  MeshInternal.cpp  MeshInternal.hpp  Renderer.cpp  Renderer.hpp  SDL.cpp  SDL.hpp  SDLWindow.cpp  SoftwareRenderer.cpp  Vertex.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  Window.cpp  Window.hpp
Code/Rendering/D3D/: D3DRenderer.cpp  D3DRenderer.hpp
Code/Rendering/Materials/: Material.cpp  Material.hpp
Code/Rendering/OpenGL/: GLRenderer.cpp  GLRenderer.hpp
Code/Rendering/ParticleSystem/: Particle.hpp
Code/Rendering/Shaders/: Shader.cpp  Shader.hpp
Code/Rendering/SoftwareRendering/: DrawUtils.cpp  DrawUtils.hpp  Raycaster.cpp  Raycaster.hpp  SoftwareMesh.cpp  SoftwareMesh.hpp  SoftwareRenderer.cpp  SoftwareRenderer.hpp
Code/Rendering/Vulkan/: QueueFamilyIndices.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanMaterial.cpp  VulkanMaterial.hpp  VulkanMesh.cpp  VulkanMesh.hpp  VulkanParticleDescription.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanUtils.cpp  VulkanUtils.hpp  VulkanVertex.hpp  VulkanVertexDescription.hpp
Code/Rendering/Vulkan/DescriptorSets/: VulkanDescriptorAllocator.cpp  VulkanDescriptorAllocator.hpp  VulkanDescriptorWriter.cpp  VulkanDescriptorWriter.hpp
Code/Rendering/Window/: SDL.cpp  SDLWindow.cpp  SDLWindow.hpp  Window.cpp  Window.hpp  WindowAPI.hpp
Code/Scene/: Actor.cpp  Actor.hpp  Component.cpp  Component.hpp  Entity.hpp  Scene.cpp  Scene.hpp  Transform.hpp
Code/Tests/: ArenaTest.cpp  ArenaTest.hpp  CMakeLists.txt  main.cpp
Shaders/GLSL/: compile.bat  compile.sh  compileToSpirV.bat  compileToSpirV.sh  default.vert  particle.comp  particle.frag  particle.vert  triangle.frag  triangle.vert
Shaders/SPIR-V/: triangle.frag.spv  triangle.vert.spv
code/: ANSI.hpp  Assert.hpp  CMakeLists.txt  CMakeSettings.json  Log.cpp  Log.hpp  main.cpp
code/Assets/: Asset.cpp  Asset.hpp  AssetManager.cpp  AssetManager.hpp  CheckFileType.cpp  CheckFileType.hpp
code/Assets/Fonts/: Font.cpp  Font.hpp  TTFFont.cpp
code/Assets/Textures/: SoftwareTexture.cpp
code/Debug/: Assert.hpp  Exception.cpp  Exception.hpp  Log.cpp  Log.hpp
code/Inputs/: Action.class.hpp  Binding.class.cpp  Binding.class.hpp  Binding.cpp  Binding.hpp  Events.cpp  Events.hpp  SDLEvents.class.cpp  SDLEvents.class.hpp  SDLEvents.cpp  math.hpp
code/Rendering/: D3DRenderer.cpp  DebugLevel.hpp  GLRenderer.cpp  GLRenderer.hpp  Renderer.cpp  Renderer.hpp  RendererType.hpp  SDL.cpp  SDLWindow.cpp  SDLWindow.hpp  SoftwareRenderer.cpp  SoftwareRenderer.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  Window.cpp  Window.hpp  WindowManager.hpp
code/Rendering/SoftwareRendering/: DrawUtils.cpp  DrawUtils.hpp  Raycaster.cpp  Raycaster.hpp
code/Textures/: Texture.cpp  Texture.hpp
